Keyframes on Sampled Motion Blur do not work correctly #29104

Closed
opened 2011-10-31 00:02:05 +01:00 by C B Newham · 5 comments

%%%Hovering over the "Number of Scene samples" and adding a keyframe correctly adds a keyframe and changes for this are stored correctly (scrubbing through the timeline shows them changing). However, the value never changes when running the animation (Alt-A) or rendering it out.

Besides the fact that keyframes are allowed on this value, it would be extremely helpful in reducing rendering times in animations where sections have little motion and other sections require blur.%%%

%%%Hovering over the "Number of Scene samples" and adding a keyframe correctly adds a keyframe and changes for this are stored correctly (scrubbing through the timeline shows them changing). However, the value never changes when running the animation (Alt-A) or rendering it out. Besides the fact that keyframes are allowed on this value, it would be extremely helpful in reducing rendering times in animations where sections have little motion and other sections require blur.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Tested under Blender 2.59 & 2.60a
both 32 and 64 bit Windows versions%%%

%%%Tested under Blender 2.59 & 2.60a both 32 and 64 bit Windows versions%%%

%%%It's not updating in the interface during playback due to missing notifications (to speedup playback). Not actually a problem.
But animating motion blur isn't supported in ender code. Value is getting copied from first rendering frame into internal structures used by renderer.
Looks more like a TODO, but maybe Brecht can suggest something here?%%%

%%%It's not updating in the interface during playback due to missing notifications (to speedup playback). Not actually a problem. But animating motion blur isn't supported in ender code. Value is getting copied from first rendering frame into internal structures used by renderer. Looks more like a TODO, but maybe Brecht can suggest something here?%%%

%%%Made these non-animateable for now, move making this work to the todo.%%%

%%%Made these non-animateable for now, move making this work to the todo.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29104
No description provided.