Fix #29104: keyframing motion blur samples did not work, made these non-animateable now like some other render settings.